hphp/test/zend/bad/ext/filter/tests/bug52209.php.skipif
<?php
/* This test makes no sense on windows as an empty variable 
   would never show up in the "set" list. Which means, it's 
   always undefined in PHP. */
if(substr(PHP_OS, 0, 3) == "WIN") die("skip Not for Windows");
if (!extension_loaded("filter") || !empty($_ENV['PWD'])) die("skip");
?>